<resources>
    <string name="app_name">DoGo</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_sign_up"></string>
    <string name="title_activity_map">MapActivity</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_dog_walker_details"></string>
    <string name="title_activity_login"></string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="title_activity_trips_report">TripsReportActivity</string>
    <string name="title_activity_my_profile">MyProfileActivity</string>
    <string name="title_activity_dogs_list">DogsListActivity</string>
    <string name="title_activity_messages">MessagesActivity</string>

    <!-- signUp strings -->
    <string name="firstName">שם פרטי:</string>
    <string name="lastName">שם משפחה:</string>
    <string name="userName">שם משתמש:</string>
    <string name="password">סיסמא:</string>
    <string name="phoneNumber">מספר טלפון:</string>
    <string name="city">עיר:</string>
    <string name="address">כתובת:</string>
    <string name="age">גיל:</string>
    <string name="isWalker">מטייל:</string>
    <string name="isOwner">בעל כלב:</string>
    <string name="hour6To8">06:00-08:00</string>
    <string name="hour8To10">08:00-10:00</string>
    <string name="hour10To12">10:00-12:00</string>
    <string name="hour12To14">12:00-14:00</string>
    <string name="hour14To16">14:00-16:00</string>
    <string name="hour16To18">16:00-18:00</string>
    <string name="hour18To20">18:00-20:00</string>
    <string name="hour20To22">20:00-22:00</string>
    <string name="comfortableTime">זמנים נוחים לטיול:</string>
    <string name="priceForHour">מחיר לשעת טיול:</string>
    <string name="allDogs">כל הכלבים שברשותי:</string>
    <string name="typeOfUser">סוג המשתמש:</string>
    <string name="dogName">שם הכלב:</string>
    <string name="dogSize">גודל הכלב:</string>
    <string name="isBig">גדול</string>
    <string name="isMedium">בינוני</string>
    <string name="isSmall">קטן</string>
    <string name="dogAge">גיל הכלב:</string>
    <string name="dogPic">תמונה של הכלב:</string>
    <string name="choosePic">עיון</string>

    <!-- list of trips strings -->
    <string name="ownerName">בעלים:</string>
    <string name="walkerName">מטייל:</string>
    <string name="startTime">שעת התחלה:</string>
    <string name="endTime">שעת סיום:</string>
    <string name="priceForTrip">מחיר סופי:</string>
    <string name="isPaid">האם שולם:</string>
    <string name="dog">כלב:</string>
    <string name="date">תאריך:</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_dog_owner_details"></string>
    <string name="title_activity_action_bar"></string>
    <string name="title_activity_map_path">MapPathActivity</string>
    <string name="title_activity_owner_trip_offering">OwnerTripOffering</string>
    <string name="title_activity_trip_offers_list">TripOffersList</string>
    <string name="title_activity_my_walkers_list">MyWalkersList</string>

</resources>
